<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_image_url_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/add_image_url_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:hint="@string/add_image_url_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <ImageView
        android:id="@+id/add_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_image_content_description_text" />

    <Button
        android:id="@+id/add_image_submit_button"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />

</LinearLayout>