<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.CookbookDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/details_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/details_content_label"
                style="@style/HeadingTextView"
                android:text="@string/content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/details_content_container"
                android:layout_width="match_parent"
                style="@style/AppFragmentContainer"
                app:layout_constraintTop_toBottomOf="@id/details_content_label"
                tools:context="com.larsonapps.personalcookbook.ContentFragment" />

            <TextView
                android:id="@+id/details_ingredient_label"
                style="@style/HeadingTextView"
                android:text="@string/ingredients"
                app:layout_constraintTop_toBottomOf="@id/details_content_container"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/details_ingredient_list_container"
                android:layout_width="match_parent"
                style="@style/AppFragmentContainer"
                app:layout_constraintTop_toBottomOf="@id/details_ingredient_label"
                tools:context="com.larsonapps.personalcookbook.IngredientFragment" />

            <TextView
                android:id="@+id/details_step_label"
                style="@style/HeadingTextView"
                android:text="@string/steps"
                app:layout_constraintTop_toBottomOf="@id/details_ingredient_list_container"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/details_step_list_container"
                android:layout_width="match_parent"
                style="@style/AppFragmentContainer"
                app:layout_constraintTop_toBottomOf="@id/details_step_label"
                tools:context="com.larsonapps.personalcookbook.StepFragment" />

            <TextView
                android:id="@+id/details_image_label"
                style="@style/HeadingTextView"
                android:text="@string/images"
                app:layout_constraintTop_toBottomOf="@id/details_step_list_container"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/details_image_list_container"
                android:layout_width="match_parent"
                style="@style/AppFragmentContainer"
                app:layout_constraintTop_toBottomOf="@id/details_image_label"
                tools:context="com.larsonapps.personalcookbook.StepFragment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_fab"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:background="@drawable/fab_background"
        android:contentDescription="@string/edit"
        android:elevation="@dimen/fab_elevation"
        android:src="@drawable/ic_edit_24px" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>